# gpu-roofline

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RTX5090_VALIDATION_HANDOFF.md
.github/workflows/: ci.yml  release.yml
crates/gpu-fleet/: Cargo.toml
crates/gpu-fleet/src/: cli.rs  fleet_validate.rs  lib.rs  main.rs  straggler.rs  symmetry.rs  topology.rs
crates/gpu-harness/: Cargo.toml
crates/gpu-harness/examples/: study_sim.rs
crates/gpu-harness/shaders/: add.wgsl  copy.wgsl  fma_light.wgsl  fma_medium.wgsl  scale.wgsl  triad.wgsl
crates/gpu-harness/shaders/cuda/: roofline_kernels.cu  tensor_kernels.cu
crates/gpu-harness/src/: backend.rs  cuda_backend.rs  device.rs  error.rs  lib.rs  nvml_telemetry.rs  wgpu_backend.rs
crates/gpu-harness/src/sim/: bandwidth.rs  fleet.rs  gpu_model.rs  mod.rs  power.rs  profiles.rs  simulated_backend.rs  thermal.rs
crates/gpu-harness/src/study/: cost_model.rs  mod.rs  noise.rs  runner.rs  scenarios.rs  stats.rs
crates/gpu-harness/src/vgpu/: contention.rs  detect.rs  mod.rs  sim.rs  state.rs  teardown.rs
crates/gpu-roofline/: Cargo.toml
crates/gpu-roofline/shaders/: fma_heavy.wgsl
crates/gpu-roofline/shaders/cuda/: roofline_kernels.cu
crates/gpu-roofline/src/: cli.rs  lib.rs  main.rs
crates/gpu-roofline/src/ceilings/: dynamic.rs  measure.rs  mod.rs
crates/gpu-roofline/src/diagnose/: mod.rs  probes.rs  report.rs  types.rs
crates/gpu-roofline/src/kernels/: definitions.rs  mod.rs
crates/gpu-roofline/src/model/: dynamic.rs  equilibrium.rs  mod.rs  roofline.rs  tension.rs
crates/gpu-roofline/src/monitor/: alerting.rs  mod.rs  sampler.rs  tui.rs  vgpu_alerting.rs  vgpu_sampler.rs  vgpu_tui.rs
crates/gpu-roofline/src/monitor/enterprise/: mod.rs  prometheus.rs  webhook.rs
crates/gpu-roofline/src/output/: ascii.rs  json.rs  mod.rs  table.rs
crates/gpu-roofline/src/validate/: adaptive.rs  baselines.rs  checks.rs  mod.rs  report.rs
crates/gpu-roofline/tests/: vgpu_integration.rs  vgpu_stress.rs
deploy/grafana/: gpu-roofline-dashboard.json
deploy/k8s/: configmap.yaml  daemonset.yaml  service.yaml  servicemonitor.yaml
docs/: CONTRIBUTING_VALIDATION.md  ROADMAP.md  enterprise-integration.md  study-abstract.md  study-protocol-ghost-allocations.md  study-protocol-gpu-waste.md  study-protocol-hardware-validation.md  study-protocol-straggler-validation.md  study-simulation-manuscript.md  study-submission-plan.md
docs/print/: README.md  gpu-waste-study-complete.html  study-abstract.html  study-print.css  study-results-summary.html  study-results-supplement.html  study-simulation-manuscript.html  study-template.html
docs/study-results/: PROVENANCE.md  README.md  SHA256SUMS.txt  analysis-results.json  provenance.json  simulation_log.txt  summary.md  supplement.md
docs/validation/: GH200_VALIDATION.md  H100_VALIDATION.md  H200_VALIDATION.md  RTX5090_VALIDATION.md  h100_cuda_events.txt  h100_mig_validation.md
docs/validation/gh200/: burst_instance1.json  burst_instance2.json  cat6_divergence_proof.json  oversubscription_visibility.json  provisioning_overhead.json
docs/validation/gh200/prospective/: h1_provisioning.json  h2_divergence.json  h3_ghost.json  h4_contention.json  h5_tension.json  summary.json
docs/validation/h100/: burst.json  burst_smi.txt  dynamic.json  dynamic_smi.txt  monitor.jsonl  tensor_results.txt  validate_json.json
docs/validation/h100_vgpu/: H100_VGPU_VALIDATION.md  raw_output.txt
docs/validation/h200/: burst.json  dynamic.json  monitor.jsonl  tensor_results.txt  validate_json.json
docs/validation/rtx5090/: burst.json  burst_err.txt  burst_out.txt  burst_smi.txt  dynamic.json  dynamic_out.txt  dynamic_smi.txt  monitor.jsonl  monitor_out.txt  tensor_results.txt  validate_json.json  validate_out.txt
scripts/: analyze_study.py  benchmark-cloud.sh  compare-providers.py  generate_figures.py  hardware-validation-protocol.sh  prospective-straggler.sh  prospective-validation.sh  test-ghost-allocation.sh
