[package]
name = "gpu-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-GPU fleet validation, topology discovery, and straggler detection"
keywords = ["gpu", "fleet", "validation", "nvidia", "nvlink"]
categories = ["hardware-support"]

[dependencies]
gpu-harness = { workspace = true }
gpu-roofline = { path = "../gpu-roofline", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
