[package]
name = "gpu-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-GPU fleet validation, topology discovery, and straggler detection"
keywords = ["gpu", "fleet", "validation", "nvidia", "nvlink"]
categories = ["hardware-support"]

[[bin]]
name = "gpu-fleet"
path = "src/main.rs"

[features]
default = ["wgpu-backend"]
wgpu-backend = ["gpu-harness/wgpu-backend"]
cuda = ["gpu-harness/cuda"]

[dependencies]
gpu-harness = { workspace = true, default-features = false }
gpu-roofline = { path = "../gpu-roofline", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
