[package]
name = "gpu-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GPU device discovery, simulation engine, and backend abstraction for cross-vendor GPU benchmarking"
keywords = ["gpu", "cuda", "benchmark", "simulation", "nvidia"]
categories = ["hardware-support", "simulation"]

[features]
default = ["wgpu-backend"]
wgpu-backend = ["dep:wgpu", "dep:pollster"]
cuda = ["dep:cudarc", "nvml"]
nvml = ["dep:nvml-wrapper"]
vgpu = ["dep:notify", "dep:chrono"]
full = ["wgpu-backend", "cuda", "nvml"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }

# GPU backends
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
cudarc = { workspace = true, optional = true }
nvml-wrapper = { workspace = true, optional = true }
notify = { version = "6", optional = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
