[package]
name = "gpu-roofline"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-vendor dynamic GPU roofline model with tension-based performance analysis"

[[bin]]
name = "gpu-roofline"
path = "src/main.rs"

[features]
default = ["wgpu-backend"]
wgpu-backend = ["gpu-harness/wgpu-backend"]
cuda = ["gpu-harness/cuda"]
nvml = ["gpu-harness/nvml"]
full = ["wgpu-backend", "cuda", "nvml"]

[dependencies]
gpu-harness = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
