[package]
name = "gpu-roofline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cross-vendor dynamic GPU roofline model with tension-based performance analysis"
keywords = ["gpu", "roofline", "benchmark", "cuda", "performance"]
categories = ["command-line-utilities", "hardware-support"]

[[bin]]
name = "gpu-roofline"
path = "src/main.rs"

[features]
default = ["wgpu-backend"]
wgpu-backend = ["gpu-harness/wgpu-backend"]
cuda = ["gpu-harness/cuda"]
nvml = ["gpu-harness/nvml"]
vgpu = ["gpu-harness/vgpu"]
enterprise = ["dep:tiny_http", "dep:ureq"]
full = ["wgpu-backend", "cuda", "nvml"]

[dependencies]
gpu-harness = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tiny_http = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
